compress pictures and add contents

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -14,7 +14,44 @@
 <!--body start-->
 <body>
 <!--fixed element start-->
-<!--fixed container-->
+<!--lol part start-->
+<!--lol contents-->
+<div class="detailbox" id="lolcontent">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("lolcontent")'>
+		<h2 class="phonetitle1">英雄联盟</h2>
+	</div>
+	<div class="introboxcontent">
+		<h2>第八届 UICCG皇室战争赛制</h2>
+		<ul>
+			<li>所有参赛人员在同一部落中，比赛以友谊赛的形式进行。比赛分为小组赛和淘汰赛。</li>
+			<li>小组赛。所有参赛人员侯倩分成若干组。组内所有人以友谊赛方式进行对战，同时积分，与组内其他人各1次对战。赢得一场比赛获得3分，平局双方各1分，输则没有分。当比赛完时，各小组前X名进淘汰赛（根据报名人数），淘汰赛人数为8/16（根据比赛人数）</li>
+			<li>淘汰赛。进入淘汰赛的参赛选手根据小组排名决定对手（如第一最另一组最后一名），以三局两胜制决定晋级。确定对手后双方进行ban卡选择，各选择1张卡，若选择相同则只有一张ban卡，即双方都不能在该局比赛中使用该卡（若使用则本局比赛判负同时警告一次，同时使用ban卡则跳过本局比赛双方同时警告，警告达到两次取消比赛资格。）每局比赛后双方可以任意调整卡组（ban卡除外）并继续下一局对战。晋级选手继续抽签直到决出冠亚季军。</li>
+		</ul>
+	</div>
+</div>
+<!--lol time-->
+<div class="detailbox" id="loltime">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("loltime")'>
+		<h2 class="phonetitle1">英雄联盟时间表</h2>
+	</div>
+	<div class="introboxcontent">
+		<div class="timetable redbg">
+			<h2>3月4日<span>星期六</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+		<div class="timetable normalbg">
+			<h2>3月5日<span>星期日</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+	</div>
+</div>
+<!--lol part end-->
+<!--ow part start-->
+<!--ow contents-->
 <div class="detailbox" id="owcontent">
 	<div class="phoneheader">
 		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("owcontent")'>
@@ -45,6 +82,28 @@
 		</ol>
 	</div>
 </div>
+<!--ow time-->
+<div class="detailbox" id="owtime">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("owtime")'>
+		<h2 class="phonetitle1">守望先锋时间表</h2>
+	</div>
+	<div class="introboxcontent">
+		<div class="timetable redbg">
+			<h2>3月4日<span>星期六</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+		<div class="timetable normalbg">
+			<h2>3月5日<span>星期日</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+	</div>
+</div>
+<!--ow part end-->
+<!--king part start-->
+<!--king contents-->
 <div class="detailbox" id="kingcontent">
 	<div class="phoneheader">
 		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("kingcontent")'>
@@ -61,15 +120,16 @@
 			当 A 组还剩下 6 只队伍，B 组还剩下 2 只队伍时，进入复赛。复赛中采用三局两胜 （BO3），胜利队伍晋级，失败队伍淘汰。最后选出冠亚季军队伍。 </p>
 	</div>
 </div>
-<div class="detailbox" id="owtime">
+<!--king time-->
+<div class="detailbox" id="kingtime">
 	<div class="phoneheader">
-		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("owtime")'>
-		<h2 class="phonetitle1">守望先锋时间表</h2>
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("kingtime")'>
+		<h2 class="phonetitle1">王者荣耀时间表</h2>
 	</div>
 	<div class="introboxcontent">
 		<div class="timetable redbg">
 			<h2>3月4日<span>星期六</span></h2>
-             <h1>网吧</h1>
+			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
 		<div class="timetable normalbg">
@@ -79,6 +139,48 @@
 		</div>
 	</div>
 </div>
+<!--king part end-->
+<!--hearthstone part start-->
+<!--hearthstone contents-->
+<div class="detailbox" id="hearthcontent">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("hearthcontent")'>
+		<h2 class="phonetitle1">炉石传说</h2>
+	</div>
+	<div class="introboxcontent">
+		<h2>第八届 UICCG炉石传说赛制</h2>
+		<h3>比赛规则</h3>
+		<p>比赛之前，每位参赛选手先将卡组截图上传到服务器上，每个人至少上传四个卡组，四个卡组的职业不可重复。两人对战之前，先互相观看对方的卡组，并互相删掉对方一个卡组，然后开始进行对战。对战时，选手可以自由决定卡组出战顺序；每次对战后，比赛胜利的一方更换卡组，输的一方不能更换卡组，先用完三套卡组的一方胜利。半决赛和决赛时，每位参赛选手需上传五套职业不同的卡组，并让对手删除掉一个卡组。其他规则和淘汰赛一样，先用完四套卡组的一方胜利。</p>
+		<h3>比赛流程</h3>
+		<p>首先随机将选手分成四个大组，在大组中将选手编号，然后一号二号对战，三号四号对战，这两组胜利的选手再进行对战， 以此类推，直至每组剩下一名选手，再进行半决赛和决赛。</p>
+		<h3>比赛场地</h3>
+		<p>可以在琢乐汇，大家绿或者租用教室。</p>
+		<h3>设备</h3>
+		<p>自带电脑，iPad或手机。</p>
+	</div>
+</div>
+<!--hearthstone time-->
+<div class="detailbox" id="hearthtime">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("hearthtime")'>
+		<h2 class="phonetitle1">炉石传说时间表</h2>
+	</div>
+	<div class="introboxcontent">
+		<div class="timetable redbg">
+			<h2>3月4日<span>星期六</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+		<div class="timetable normalbg">
+			<h2>3月5日<span>星期日</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+	</div>
+</div>
+<!--hearthstone part end-->
+<!--clash royale part start-->
+<!--clash royale contents-->
 <div class="detailbox" id="crcontent">
 	<div class="phoneheader">
 		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("crcontent")'>
@@ -93,6 +195,70 @@
 		</ul>
 	</div>
 </div>
+<!--clash royale time-->
+<div class="detailbox" id="crtime">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("crtime")'>
+		<h2 class="phonetitle1">皇室战争时间表</h2>
+	</div>
+	<div class="introboxcontent">
+		<div class="timetable redbg">
+			<h2>3月4日<span>星期六</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+		<div class="timetable normalbg">
+			<h2>3月5日<span>星期日</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+	</div>
+</div>
+<!--clash royale part end-->
+<!--dizhu part start-->
+<!--dizhu contents-->
+<div class="detailbox" id="dizhucontent">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("dizhucontent")'>
+		<h2 class="phonetitle1">斗地主</h2>
+	</div>
+	<div class="introboxcontent">
+		<h2>第八届 UICCG斗地主赛制</h2>
+		<h3>游戏介绍</h3>
+		<p>斗地主是一种在中国流行的纸牌游戏。游戏用一副含有54张牌（包括大小鬼王）的扑克牌，由3个玩家进行，其中一方为地主，其余两人为另一方——农民。双方对战，先出完牌的一方获胜。</p>
+		<p>本次比赛选择使用人群基数较大的“欢乐斗地主”应用，需要参赛选手将游戏app更新到最新版以免出错，版本以比赛第一轮开始前的官方最新发布版本为准。因游戏版本过低导致无法邀请好友及其他问题者自行承担后果！</p>
+		<h3>赛制</h3>
+		<h4>入围赛：</h4>
+		<p>选手们将被随机分组，3人为一组，多余的选手轮空到下一轮比赛。一组进行3轮比赛，采用积分制记录，3轮比赛后积分最高的一人胜出进入下一轮（需等该轮所有人完成比赛后才进行下一轮）。若组内2人或3人分数均相同，将加赛1场，决出唯一一名获胜者进入下一轮，以此类推。</p>
+		<p>可能出现的情况（举例）：</p>
+		<p><b>1.甲，乙都为2分，丙为1分：</b></p>
+		<p>甲乙丙在一起加赛1场，只在甲、乙中决出胜者，甲、乙分数高者出线，丙无论多少分均无法出线。</p>
+		<p><b>甲、乙、丙三人同分：</b></p>
+		<p>加赛一场，分高者出线。如果加赛后出现第一种情况，则按照第一种情况继续比赛。</p>
+		<h3>决赛</h3>
+		<p>当比赛人数只剩下最后3人时进行决赛。决赛将进行6轮比赛，6轮比赛后积分最高者将获得本次“斗地主”大赛冠军！若出现积分相同的情况，请参考上面入围赛的规则。</p>
+	</div>
+</div>
+<!--dizhu time-->
+<div class="detailbox" id="dizhutime">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("dizhutime")'>
+		<h2 class="phonetitle1">斗地主时间表</h2>
+	</div>
+	<div class="introboxcontent">
+		<div class="timetable redbg">
+			<h2>3月4日<span>星期六</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+		<div class="timetable normalbg">
+			<h2>3月5日<span>星期日</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+	</div>
+</div>
+<!--dizhu part end-->
 <!--fixed container end-->
 <!--PC fixed element start-->
 <div class="header">
@@ -132,12 +298,12 @@
 <table cellpadding="18px">
 <tr><th><b>Menu</b></th></tr>
 	<tr><td><a href="#blank" onclick="hidephonebar()"><b>主页</b></a></td></tr>
-	<tr><td><a href="" onclick="hidephonebar()"><b>英雄联盟</b></a></td></tr>
-	<tr><td><a href="#owintro" onclick="hidephonebar()"><b>守望先锋</b></a></td></tr>
-	<tr><td><a href="#kingintro" onclick="hidephonebar()"><b>王者荣耀</b></a></td></tr>
-	<tr><td><a href="#crintro" onclick="hidephonebar()"><b>皇室战争</b></a></td></tr>
-	<tr><td><a href="" onclick="hidephonebar()"><b>炉石传说</b></a></td></tr>
-	<tr><td><a href="" onclick="hidephonebar()"><b>欢乐斗地主</b></a></td></tr>
+	<tr><td><a href="#lolintro" onclick="hidephonebar()"><b>英雄联盟</b></a></td></tr>
+	<tr><td><a href="#ow" onclick="hidephonebar()"><b>守望先锋</b></a></td></tr>
+	<tr><td><a href="#king" onclick="hidephonebar()"><b>王者荣耀</b></a></td></tr>
+	<tr><td><a href="#cr" onclick="hidephonebar()"><b>皇室战争</b></a></td></tr>
+	<tr><td><a href="#hearth" onclick="hidephonebar()"><b>炉石传说</b></a></td></tr>
+	<tr><td><a href="#dizhu" onclick="hidephonebar()"><b>欢乐斗地主</b></a></td></tr>
 	<tr><th id="phonebarth"><a href="http://uiccst.com/form"><b>Register Now</b></a></th></tr>
 
 </table>
@@ -145,17 +311,18 @@
 
 <!--Mobile fixed element end-->
 <!--fixed element end-->
-
+<!--blank part-->
 <div id="blank">
 </div>
-
+<!--main content begin-->
 <div class="banner" id="b04">
     <ul>
         <li><img src="images/lol.jpg" alt="" width="100%" height="auto" ></li>
-        <li><img src="images/ow.png" alt="" width="100%" height="auto" ></li>
+        <li><img src="images/ow.jpg" alt="" width="100%" height="auto" ></li>
         <li><img src="images/hearthstone.jpg" alt="" width="100%" height="auto" ></li>
         <li><img src="images/king.jpg" alt="" width="100%" height="auto" ></li>
         <li><img src="images/clashroyale.png" alt="" width="100%" height="auto" ></li>
+		<li><img src="images/dizhu.jpg" alt="" width="100%" height="auto" ></li>
     </ul>
     <a href="javascript:void(0);" class="unslider-arrow04 prev"><img class="arrow" id="al" src="images/arrowl.png" alt="prev" width="20" height="35"></a>
     <a href="javascript:void(0);" class="unslider-arrow04 next"><img class="arrow" id="ar" src="images/arrowr.png" alt="next" width="20" height="37"></a>
@@ -163,19 +330,35 @@
 
 <!--add things from here-->
 <div class="maingame clearfix" id="introduction">
+	<!--lol intro-->
 	<div class="gamecontainer  flowleft">
+		<div class="introbox shadow"  id="lolintro" onclick='showdetailbox("lolcontent")'>
+			<img src="images/lol.jpg" width="100%" alt="">
+			<h2>英雄联盟</h2>
+			<p class="left">《英雄联盟》(简称LOL)是由美国拳头游戏(Riot Games)开发、中国大陆地区腾讯游戏代理运营的英雄对战MOBA竞技网游。游戏里拥有数百个个性英雄，并拥有排位系统、天赋系统、符文系统等特色养成系统。《英雄联盟》还致力于推动全球电子竞技的发展，除了联动各赛区发展职业联赛、打造电竞体系之外，每年还会举办“季中冠军赛”“全球总决赛”“All Star全明星赛”三大世界级赛事，获得了亿万玩家的喜爱。</p>
+			<p class="spanleft"><b>查看全文</b></p>
+		</div>
+		<button class="mainbutton1 bluebutton" id="ow" onclick="showdetailbox('loltime')">
+			查看比赛时间和地点
+		</button>
+	</div>
+<!--ow intro-->
+	<div class="gamecontainer  flowright">
   <div class="introbox shadow"  id="owintro" onclick='showdetailbox("owcontent")'>
-	  <img src="images/ow.png" width="100%" alt="">
+	  <img src="images/ow.jpg" width="100%" alt="">
 	  <h2>守望先锋</h2>
 <p class="left">《守望先锋》是一款由暴雪娱乐开发并发行的多人第一人称射击游戏。<br>
 	《守望先锋》把玩家分为两支队伍，每队6人。玩家可从几个预定英雄人物中选择，每个英雄有自己独特属性和技能；这些英雄分为四类：突击型、防御型、重装型和支援型。队员合力保护并捍卫地图上的控制点，或在有限时间内护送载具到达指定地点。玩家获得的诸如人物皮肤和胜利姿势等装扮不会影响游戏。</p>
 	  <p class="spanleft"><b>查看全文</b></p>
   </div>
-	<button class="mainbutton1 bluebutton" onclick="showdetailbox('owtime')">
+	<button class="mainbutton1 bluebutton" id="king" onclick="showdetailbox('owtime')">
 		查看比赛时间和地点
 	</button>
 	</div>
-	<div class="gamecontainer flowright">
+</div>
+<div class="maingame clearfix">
+	<!--king intro-->
+	<div class="gamecontainer flowleft">
 	<div class="introbox shadow"  id="kingintro" onclick='showdetailbox("kingcontent")'>
 		<img src="images/king.jpg" width="100%" alt="">
 		<h2>王者荣耀</h2>
@@ -183,11 +366,12 @@
 			<br>王者荣耀是类dota手游，游戏中的玩法以竞技对战为主，玩家之间进行1V1、3V3、5V5等多种方式的PVP对战，还可以参加游戏的冒险模式，进行PVE的闯关模式，在满足条件后可以参加游戏的年度排位赛等。</p>
 		<p class="spanleft"><b>查看全文</b></p>
 	</div>
-		<button class="mainbutton1 bluebutton">
+		<button class="mainbutton1 bluebutton" id="cr" onclick="showdetailbox('kingtime')">
 			查看比赛时间和地点
 		</button>
 	</div>
-	<div class="gamecontainer flowleft">
+	<!--clash royale intro-->
+	<div class="gamecontainer flowright">
 	<div class="introbox shadow"  id="crintro" onclick='showdetailbox("crcontent")'>
 		<img src="images/clashroyale.png" width="100%" alt="">
 		<h2>皇室战争</h2>
@@ -195,18 +379,49 @@
 			在游戏中，玩家需通过不断的开启宝箱来获取卡片的方式来增强自己的战斗力，进而与其他在线的玩家进行匹配战斗。随着奖杯提升，开启不同场地的竞技场。</p>
 		<p class="spanleft"><b>查看全文</b></p>
 	</div>
-		<button class="mainbutton1 bluebutton">
+		<button class="mainbutton1 bluebutton" id="hearth" onclick="showdetailbox('crtime')">
 			查看比赛时间和地点
 		</button>
 </div>
-<!--blank-->
 </div>
+<div class="maingame clearfix">
+	<!--hearthstone intro-->
+	<div class="gamecontainer flowleft">
+		<div class="introbox shadow"  id="hearthintro" onclick='showdetailbox("hearthcontent")'>
+			<img src="images/hearthstone.jpg" width="100%" alt="">
+			<h2>炉石传说</h2>
+			<p class="left">《炉石传说：魔兽英雄传》是暴雪娱乐开发的一款集换式卡牌游戏。
+				《炉石传说：魔兽英雄传》是一款免费游戏，故事背景基于魔兽争霸系列的世界观，玩家可以另行购买卡牌包。</p>
+			<p class="spanleft"><b>查看全文</b></p>
+		</div>
+		<button class="mainbutton1 bluebutton" onclick="showdetailbox('hearthtime')">
+			查看比赛时间和地点
+		</button>
+		<button class="mainbutton1 orangebutton" id="dizhu" onclick="openpage('hearthstone/index.html')">
+			上传和查看炉石卡组
+		</button>
+	</div>
+	<!--dizhu intro-->
+	<div class="gamecontainer flowright">
+		<div class="introbox shadow"  id="dizhuintro" onclick='showdetailbox("dizhucontent")'>
+			<img src="images/dizhu.jpg" width="100%" alt="">
+			<h2>斗地主</h2>
+			<p class="left">斗地主是一种在中国流行的纸牌游戏。游戏由3个玩家进行，用一副54张牌（包括大小王），其中一方为地主，其余两家为另一方，双方对战，先出完牌的一方获胜。</p>
+			<p class="spanleft"><b>查看全文</b></p>
+		</div>
+		<button class="mainbutton1 bluebutton" onclick="showdetailbox('dizhutime')">
+			查看比赛时间和地点
+		</button>
+	</div>
+</div>
+<!--main content end-->
+<!--footer part-->
 <div id="footer">
 	©2016-2017 UIC-PANICS \ All Rights Reserved.
 </div>
-
-
 </body>
+
+<!--Js part-->
 <script>
 $(document).ready(function(e) {
     var unslider04 = $('#b04').unslider({
