fix javascript src problem

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -10,7 +10,7 @@
 <script src="js/unslider.min.js"></script>
 <script src="js/dynamic.js"></script>
 <script src="js/device.js"></script>
-	<script src="js/jquery.scrollTo.js"></script>
+	<script src="js/jquery.scrollto.js"></script>
 </head>
 <!--body start-->
 <body>
