--- a/cybergame/hearthstone/index.html
+++ b/cybergame/hearthstone/index.html
@@ -6,7 +6,7 @@
 	<meta name="theme-color" content="rgb(49,60,85)">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-	<script src="../js/phonebar.js"></script>
+	<script src="../js/dynamic.js"></script>
 </head>
 <body>
 <div id="phoneheader">
