--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -11,6 +11,9 @@
 <script src="js/dynamic.js"></script>
 <script src="js/device.js"></script>
 	<script src="js/jquery.scrollto.js"></script>
+	<script>
+
+	</script>
 </head>
 <!--body start-->
 <body>
