--- a/homepagetwopointo/index.html
+++ b/homepagetwopointo/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="head-slide">
-        <img class="head-img" src="assets/img/head1.jpg">
+        <img class="head-img img-fluid" src="assets/img/head1.jpg">
     </div><!--End of Head Picture-->
     <div class="container">
-        <div class="navbar">
+        <div class="navbar container">
             <div class="logo-container">
                 <a href="http://www.uiccst.com">
-                    <img class="logo" src="assets/img/new_logo.png">
+                    <img class="logo img-fluid" src="assets/img/new_logo.png">
                 </a>
                 <div class="navbar-btm">
                     <a class="navbar-margin" href="http://uic.edu.hk">UIC Homepage</a>
