--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>计算机人要改变世界丨UICcst</title>
-    <!--<link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />-->
-    <link href="http://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
     <link href="assets/css/gsdk.css" rel="stylesheet" />  
     <link href="assets/css/demo.css" rel="stylesheet" /> 
     <link rel="stylesheet" href="fonts/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
@@ -16,16 +15,24 @@
 </head>
 <body>
 <div id="navbar-full">
-    <div class="container topback">
+    <div class="container">
         <nav class="navbar navbar-ct-black navbar-transparent navbar-fixed-top" role="navigation">
-          
+
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a href="http://www.uiccst.com">
+                     <div class="logo-container">
                         <div class="logo">
                             <img src="assets/img/new_logo.png">
                         </div>
+                    </div>
                 </a>
             </div>
         
@@ -99,12 +106,52 @@ Technology Homepage_
 
     <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
 	<script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
-	<!--<script src="bootstrap3/js/bootstrap.js" type="text/javascript"></script>-->
-    <script src="http://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
+	<script src="bootstrap3/js/bootstrap.js" type="text/javascript"></script>
 	<script src="assets/js/gsdk-checkbox.js"></script>
 	<script src="assets/js/gsdk-radio.js"></script>
 	<script src="assets/js/gsdk-bootstrapswitch.js"></script>
 	<script src="assets/js/get-shit-done.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="fonts/specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>
+
+<!-- Light Box Script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="assets/js/jquery.colorbox.js"></script>
+
+<script type="text/javascript">
+
+    $('.btn-tooltip').tooltip();
+    $('.label-tooltip').tooltip();
+    $('.pick-class-label').click(function(){
+        var new_class = $(this).attr('new-class');
+        var old_class = $('#display-buttons').attr('data-class');
+        var display_div = $('#display-buttons');
+        if(display_div.length) {
+        var display_buttons = display_div.find('.btn');
+        display_buttons.removeClass(old_class);
+        display_buttons.addClass(new_class);
+        display_div.attr('data-class', new_class);
+        }
+    });
+    $( "#slider-range" ).slider({
+		range: true,
+		min: 0,
+		max: 500,
+		values: [ 75, 300 ],
+	});
+	$( "#slider-default" ).slider({
+			value: 70,
+			orientation: "horizontal",
+			range: "min",
+			animate: true
+	});
+	$('.carousel').carousel({
+      interval: 4000
+    });
+
+    $(document).ready(function(){
+        $("a.picture").colorbox({transition:"fade"});
+    });
+</script>
 </html>
