--- a/homepagetwopointo/prototype 2/ecommerce.html
+++ b/homepagetwopointo/prototype 2/ecommerce.html
@@ -34,48 +34,36 @@
         <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
         <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
         <li class="orbit-slide is-active">
-          <div>
             <img src="assets/img/head1.jpg">
-          </div>
+          <p>bbb</p>
         </li>
         <li class="orbit-slide">
-          <div>
             <img src="assets/img/head2.jpg">
-          </div>
+          <p>bbb</p>
         </li>
         <li class="orbit-slide">
-          <div>
             <img src="assets/img/head3.jpg">
-          </div>
+          <p>ddd</p>
         </li>
         <li class="orbit-slide">
-          <div>
             <img src="assets/img/head4.jpg">
-          </div>
+          <p>eee</p>
         </li>
       </ul>
     </div>
-    <div class="callout large secondary">
+    <div class="zurb-footer-bottom">
       <div class="row">
-        <div class="large-4 columns">
-          <h5>Vivamus Hendrerit Arcu Sed Erat Molestie</h5>
-          <p>Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit.</p>
+        <div class="medium-4 medium-push-8 columns">
         </div>
-        <div class="large-3 large-offset-2 columns">
-          <ul class="menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
+        <div class="medium-8 medium-pull-4 columns">
+          <a href="http://www.zurb.com" class="zurb-logo regular"></a>
+          <ul class="zurb-links">
+            <li><a href="#">About</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">UIC Homepage</a></li>
           </ul>
-        </div>
-        <div class="large-3 columns">
-          <ul class="menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
-          </ul>
+          <p class="copyright">© 2016-2017 UIC-PANICS. All rights reserved.</p>
         </div>
       </div>
     </div>
