--- a/homepagetwopointo/prototype 2/ecommerce.html
+++ b/homepagetwopointo/prototype 2/ecommerce.html
@@ -6,11 +6,13 @@
     <title>计算机人要改变世界丨UICcst</title>
     <link rel="stylesheet" href="http://cdn.uiccst.com/assets/css/foundation.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="fonts/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
   </head>
   <body>
 
     <!-- Start Top Bar -->
-    <div class="top-bar black-navbar">
+    <div class="black-navbar">
       <div class="top-bar-left row column text-center">
         <ul class="menu black-navbar">
           <li class="menu-text nopadding">
@@ -29,25 +31,25 @@
     <!-- End Top Bar -->
 
 
-    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+    <div class="orbit black-navbar" role="region" aria-label="Favorite Space Pictures" data-orbit>
       <ul class="orbit-container">
         <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
         <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
         <li class="orbit-slide is-active">
             <img src="assets/img/head1.jpg">
-          <p>bbb</p>
+          <p class="white row words">Computer Science</p>
         </li>
         <li class="orbit-slide">
             <img src="assets/img/head2.jpg">
-          <p>bbb</p>
+          <p class="white row words">Word and life</p>
         </li>
         <li class="orbit-slide">
             <img src="assets/img/head3.jpg">
-          <p>ddd</p>
+          <p class="white row words">Test word 3</p>
         </li>
         <li class="orbit-slide">
             <img src="assets/img/head4.jpg">
-          <p>eee</p>
+          <p class="white row words">Test word 4</p>
         </li>
       </ul>
     </div>
@@ -63,7 +65,7 @@
             <li><a href="#">Contact</a></li>
             <li><a href="#">UIC Homepage</a></li>
           </ul>
-          <p class="copyright">© 2016-2017 UIC-PANICS. All rights reserved.</p>
+          <p class="white">© 2016-2017 UIC-PANICS. All rights reserved.</p>
         </div>
       </div>
     </div>
