--- a/homepagetwopointo/prototype 1/index.html
+++ b/homepagetwopointo/prototype 1/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>计算机人要改变世界丨UICcst</title>
-    <link href="http://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="fonts/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
-    <link href="http://cdn.bootcss.com/tether/1.4.0/css/tether.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/tether/1.4.0/css/tether.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -33,7 +33,7 @@
         </div>
     </div>
 </body>
-<script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
-<script src="http://cdn.bootcss.com/tether/1.4.0/js/tether.js"></script>
-<script src="http://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
+<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
+<script src="//cdn.bootcss.com/tether/1.4.0/js/tether.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
 </html>
