--- a/homepagetwopointo/prototype 2/index.html
+++ b/homepagetwopointo/prototype 2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>计算机人要改变世界丨UICcst</title>
     <link rel="stylesheet" href="http://cdn.uiccst.com/assets/css/foundation.css">
+    <link href="http://cdn.bootcss.com/foundation/6.3.0/css/foundation.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="fonts/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
@@ -71,6 +72,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://cdn.bootcss.com/foundation/6.3.0/js/foundation.js"></script>
     <script src="http://cdn.uiccst.com/assets/js/vendor/foundation.js"></script>
     <script>
       $(document).foundation();
