fix https problem 2

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>计算机人要改变世界丨UICcst</title>
-    <link rel="stylesheet" href="http://cdn.uiccst.com/assets/css/foundation.css">
-    <link href="http://cdn.bootcss.com/foundation/6.3.0/css/foundation.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="http://cdn.uiccst.com/assets/css/foundation.css"> -->
+    <link href="https://cdn.bootcss.com/foundation/6.3.0/css/foundation.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="fonts/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
@@ -72,8 +72,8 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://cdn.bootcss.com/foundation/6.3.0/js/foundation.js"></script>
-    <script src="http://cdn.uiccst.com/assets/js/vendor/foundation.js"></script>
+    <script src="https://cdn.bootcss.com/foundation/6.3.0/js/foundation.js"></script>
+    <!-- <script src="http://cdn.uiccst.com/assets/js/vendor/foundation.js"></script> -->
     <script>
       $(document).foundation();
     </script>
