fix cybergame https

--- a/cybergame/hearthstone/preupload.html
+++ b/cybergame/hearthstone/preupload.html
@@ -30,7 +30,7 @@
 </table>
 </div>
 <table id="login" cellpadding="20px">
-<tr><th><img src="css/hearthstonelogo.png" width="50%"></th></tr>
+<tr><th><img src="https://ols1alctg.qnssl.com/17-2-23/40963323-file_1487812102189_fc4e.png" width="50%"></th></tr>
 <tr><td>
 <div id="mainform">
 <form action="preupload.php" method="post">
