fix a console to scroll

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -280,7 +280,7 @@
 <div id="bar2">
 <table cellspacing="0">
 	<tr style="height: 50px">
-		<th><button class="buttonstyle"  onclick="console.log(document.body.scrollTop)">主页</button></th>
+		<th><button class="buttonstyle"  onclick="$.scrollTo('#blank',1000)">主页</button></th>
 		<th><button class="buttonstyle"  onclick="$.scrollTo('#introduction',1000)">赛制介绍与比赛日程</button></th>
 		
 	</tr>
