begin to fix hearthstone upload system

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -308,7 +308,7 @@
 	<tr><td onclick="hidephonebar();$.scrollTo('#cr',1000)"><b>皇室战争</b></td></tr>
 	<tr><td onclick="hidephonebar();$.scrollTo('#hearth',1000)"><b>炉石传说</b></td></tr>
 	<tr><td onclick="hidephonebar();$.scrollTo('#dizhu',1000)"><b>欢乐斗地主</b></td></tr>
-	<tr><th id="phonebarth"><a href="http://uiccst.com/form"><b>Register Now</b></a></th></tr>
+	<tr><th id="phonebarth"><a href="https://form.uiccst.com"><b>Register Now</b></a></th></tr>
 
 </table>
 </div>
