--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>计算机人要改变世界丨UICcst</title>
     <!-- <link rel="stylesheet" href="http://cdn.uiccst.com/assets/css/foundation.css"> -->
-    <link href="https://cdn.bootcss.com/foundation/6.3.0/css/foundation.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <!-- <link href="https://cdn.bootcss.com/foundation/6.3.0/css/foundation.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="fonts/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
@@ -34,13 +35,13 @@
 
     <div class="orbit black-navbar" role="region" aria-label="Favorite Space Pictures" data-orbit>
       <ul class="orbit-container">
-        <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
-        <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
+<!--         <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
+        <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button> -->
         <li class="orbit-slide is-active">
             <img src="assets/img/head1.jpg">
-          <p class="white row words">Computer Science<span class="awords">awords</span></p>
+          <p class="white row words">Computer Science <span class="awords">UICcst 2017</span></p>
         </li>
-        <li class="orbit-slide">
+<!--         <li class="orbit-slide">
             <img src="assets/img/head2.jpg">
           <p class="white row words">Word and life</p>
         </li>
@@ -51,7 +52,7 @@
         <li class="orbit-slide">
             <img src="assets/img/head4.jpg">
           <p class="white row words">Test word 4</p>
-        </li>
+        </li> -->
       </ul>
     </div>
     <div class="zurb-footer-bottom">
@@ -59,7 +60,7 @@
         <div class="medium-4 medium-push-8 columns">
         </div>
         <div class="medium-8 medium-pull-4 columns">
-          <a href="http://www.zurb.com" class="zurb-logo regular"></a>
+          <a href="http://www.uiccst.com" class="zurb-logo regular"></a>
           <ul class="zurb-links">
             <li><a href="#">About</a></li>
             <li><a href="#">News</a></li>
@@ -72,7 +73,8 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://cdn.bootcss.com/foundation/6.3.0/js/foundation.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/foundation/6.3.0/js/foundation.js"></script> -->
+    <script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <!-- <script src="http://cdn.uiccst.com/assets/js/vendor/foundation.js"></script> -->
     <script>
       $(document).foundation();
