add game rules when i am free

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -26,12 +26,35 @@
 		<h2 class="phonetitle1">英雄联盟</h2>
 	</div>
 	<div class="introboxcontent">
-		<h2>第八届 UICCG皇室战争赛制</h2>
-		<ul>
-			<li>所有参赛人员在同一部落中，比赛以友谊赛的形式进行。比赛分为小组赛和淘汰赛。</li>
-			<li>小组赛。所有参赛人员侯倩分成若干组。组内所有人以友谊赛方式进行对战，同时积分，与组内其他人各1次对战。赢得一场比赛获得3分，平局双方各1分，输则没有分。当比赛完时，各小组前X名进淘汰赛（根据报名人数），淘汰赛人数为8/16（根据比赛人数）</li>
-			<li>淘汰赛。进入淘汰赛的参赛选手根据小组排名决定对手（如第一最另一组最后一名），以三局两胜制决定晋级。确定对手后双方进行ban卡选择，各选择1张卡，若选择相同则只有一张ban卡，即双方都不能在该局比赛中使用该卡（若使用则本局比赛判负同时警告一次，同时使用ban卡则跳过本局比赛双方同时警告，警告达到两次取消比赛资格。）每局比赛后双方可以任意调整卡组（ban卡除外）并继续下一局对战。晋级选手继续抽签直到决出冠亚季军。</li>
-		</ul>
+		<h2>第八届 UICCG英雄联盟赛制</h2>
+		参赛须知:
+		1.	线上报名，进群报名：--五人组队。
+		2.	参赛选手需要先参加小组赛，然后进去决赛。(小组赛采取BO3:三盘两胜制，决赛采取BO5:五盘三胜制)工作人员会把参赛队伍分成两个小组，然后开始抽签打第一轮比赛，赢得队伍进入第二轮，输的队伍参加复活赛（复活赛决出两只队伍进入第二轮），第二轮，个队伍抽签打淘汰赛，赢的队伍进入第三轮，然后进行循环赛，决出小组赛的第一第二名。每天决出一个小组的第一第二名。隔周进行决赛，决赛决出冠亚季军。
+		3.	晋级决赛后，请密切留意后续的比赛信息，建议和工作人员联系，了解清楚。
+		4.	小组赛采取车轮战，具体的比赛日期，请密切留意比赛信息(大概在3月初或者3月中旬)
+
+		参赛账号：
+		1.	因为要统一一个比赛区，防止不公平的现象出现，我们会采取通过购买比赛服账号（费用需要参赛选手自己付大约是30元一个，用一天，ps：淘宝上买的，如果参赛选手想要自己买，也是可以的，到比赛场地后，工作人员同意上网购买）
+
+		比赛规则：5VS5 召唤师峡谷
+		1、参赛选手须提前到达现场参赛，迟到10分钟将视为弃权。
+		2、参赛选手须年满18周岁，并携带本人有效身份证参赛； ；
+		3、所有比赛均为5v5、房间模式、征召模式；
+		4、比赛原则上采用淘汰赛、三局两胜定胜负，各赛区根据参赛队伍数量以裁判现场安排为准；
+		5、比赛胜负由系统判定胜负为准；
+		6、由裁判组织双方队长猜拳一轮，胜方开设房间，并在房间左侧，败者在右侧；
+		7、抽签、开设建房、进入房间须有效率，裁判发起命令3分钟内未作为的队伍视为弃权；
+		8、比赛禁选开始至比赛结束全过程不得人为退出游戏，违者视为弃权；
+		9、队伍中只要有1名选手被视为弃权，则全队取消参赛资格；
+		10、比赛开始10分钟内若有选手掉线（非人为），且不能在5分钟内重连成功，比赛重新开始。重赛时双方必须选择和重赛前完全一样的阵容和召唤师技能；（选手一旦掉线，必须立刻呼叫裁判，在裁判的监督下进行重连，若选手掉线不联系裁判，则比赛照常进行）
+		11、比赛进行10分钟后，若有选手掉线（非人为），则在双方完成正在进行的战斗后，全部回程，直到掉线选手重新连接。重连期间双方可各派1-2名队员击杀正在攻击本方防御塔、水晶或基地的小兵，但不能离开本方防御塔攻击范围追杀小兵，不能进入野区、河道，不能埋伏、攻击对方英雄，违者视为弃权；（选手一旦掉线，必须立刻呼叫裁判，在裁判的组织下双方选手等待掉线选手重连，若选手掉线不联系裁判，则比赛照常进行）
+		12、如果掉线选手10分钟内无法重连成功，或者掉线造成了逆转性的局势变化，裁判可在整局比赛结束前根据情况决定是否重赛，选手须完全服从，重赛时双方必须选择和重赛前完全一样的阵容；比赛一旦结束，则以比赛结果为准，不得重赛；
+		13、比赛中不得使用任何第三方软件(聊天工具除外)，否则视为弃权；
+		14、比赛中不得利用任何BUG，不得使用有严重BUG的英雄，以现场裁判通知为准；
+		15、比赛中出现任何突发情况，须立即与裁判联系，裁判作出判罚，选手须完全服从；
+		16、本次赛事解释权归cst专业协会所有。
+
+		比赛咨询：（每个组的队长最好都加进来）
 	</div>
 </div>
 <!--lol time-->
