fix some problem

--- a/cybergame/hearthstone/index.html
+++ b/cybergame/hearthstone/index.html
@@ -15,7 +15,7 @@
 </div>
 <h3 id="phonetitle">炉石卡组查看</h3>
 <ul>
-	<a href="../index.html"><li>主页</li></a>
+	<a href="../index.php"><li>主页</li></a>
 	<a href="preupload.html"><li>上传卡组</li></a>
 </ul>
 </div>
@@ -24,7 +24,7 @@
 <div id="phonebar">
 <table cellpadding="18px">
 <tr><th><b>Menu</b></th></tr>
-	<tr><td><a href="../index.html"><b>主页</b></a></td></tr>
+	<tr><td><a href="../index.php"><b>主页</b></a></td></tr>
 	<tr><th id="phonebarth"><a href="preupload.html"><b>上传卡组截图</b></a></th></tr>
 
 </table>
