1.typed.js 2.info 3.hyperlinks

--- a/homepagetwopointo/prototype 2/index.html
+++ b/homepagetwopointo/prototype 2/index.html
@@ -21,9 +21,9 @@
               <img class="logo" src="assets/img/new_logo.png">
             </a>
           </li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="http：//uic.edu.hk/">UIC Homepage</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="http://uic.edu.hk/">UIC Homepage</a></li>
           <li><a href="https://www.github.com/UIC-PANICS">GitHub Organization</a></li>
         </ul>
       </div>
