fix some bugs in console

--- a/homepage_old/index.html
+++ b/homepage_old/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
@@ -60,7 +60,7 @@
         </nav>
     </div><!--  end container-->
     <div class='blurred-container'>
-        <div class="img-src" style="background-image: url('assets/img/head1.jpg')"></div>
+        <div class="img-src" style="background-image: url('https://ols1alctg.qnssl.com/head1.jpg')"></div>
     </div>
 </div>
                     
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-md-7 col-md-offset-0 col-sm-10 col-sm-offset-1">
                     <div class="text-center">
-                        <div class="picture" href="assets/img/img.jpg" title="UICcst 2017"><img src="assets/img/img.jpg" alt="Rounded Image" class="img-rounded img-responsive img-dog"></div>
+                        <div class="picture" href="assets/img/img.jpg" title="UICcst 2017"><img src="https://ols1alctg.qnssl.com/86270807-file_1487769396105_13612.jpg" alt="Rounded Image" class="img-rounded img-responsive img-dog"></div>
                         <p class="caption">UICcst group photo <span style="color: #575757; font-style: italic">(shot in 2016)</span></p>
                     </div>
                 </div>
@@ -129,8 +129,7 @@
 	<script src="assets/js/gsdk-bootstrapswitch.js"></script>
 	<script src="assets/js/get-shit-done.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="fonts/specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>
+    <!--<script src="fonts/specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>-->
 
 <!-- Light Box Script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
