fix display problem in phone version

--- a/homepage_old/index.html
+++ b/homepage_old/index.html
@@ -94,12 +94,14 @@
                     <p style="text-indent: 30px">Information technology plays an important role in driving the growth of the computer industry in China and all over the world. In China, up till now, there is still a great shortage of computer professionals: including computer analyst, application programmer, software engineering and junior software developer etc. Moreover, the Chinese Government has been pushing very hard to develop the software industry with an aim to compete and surpass India and Israel for a larger share of the IT outsourcing market. In the world of innovation, entrepreneurial businesses and venture capital there are also great demand and interests in recruiting managers well versed in IT. The above examples show that there is a great demand for IT professionals, especially in Mainland in the years to come.</p>
 
                 </div>
+                <div class="col-md-12">
                     <p style="text-indent: 30px">This programme aims to prepare students for a career in computer science or information-technology related areas. Students will be equipped to work in industry, business etc., or to pursue post-graduate study in China or abroad. Graduates will have developed learning skills and have the confidence to meet the challenges in the rapidly changing world of information technology. By studying this programme, the students are enabled to benefit from a broad-based education as they pursue a technology education with a specialization in computer science. Accordingly, students will be required to study a range of general education, information technology courses to achieve a balanced literal arts education. This is consistent with UIC’s mission of providing its students with a whole person education that prepares them for lifelong learning.</p>
 
                     <p style="text-indent: 30px">Graduates will be prepared to pursue a future in fields relating to computer analyst, application programmer, software engineering and junior software developer etc. They will be well positioned to work in private and public organizations of Mainland China, Hong Kong, or foreign firms, such as IT companies, Telecommunication companies, software firms, etc.</p>
 
                     <p style="text-indent: 30px">Graduates are also encouraged to pursue their post-graduate studies in Hong Kong or abroad. The curriculum of the programme meets international standards. In addition, using international and popular textbooks for our courses and conducting the instruction in English help students gain an advantage in their further studies. After graduation students can also continue with more advanced studies in the other Universities to obtain higher degrees, such as Masters or Ph.D.</p>
                 <br>
+                </div>
                 </div>
                 <p class="caption" style="float:right">Programme Director:<b> Prof. SU, Weifeng</b></p>
             </div>
@@ -130,7 +132,7 @@
 	<script src="assets/js/get-shit-done.js"></script>
     <script src="assets/js/custom.js"></script>
     <!--<script src="fonts/specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>-->
-
+    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>-->
 <!-- Light Box Script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="assets/js/jquery.colorbox.js"></script>
