--- a/homepage_old/index.html
+++ b/homepage_old/index.html
@@ -117,7 +117,7 @@
 <!-- end container -->
     <footer class="footer">
     <div class="container">
-        <span class='text-muted'>&copy; UIC-PANICS 2016-2017</span>
+        <span class='text-muted'>&copy; UIC-PANICS 2016-2017 <a href="http://www.miitbeian.gov.cn/">粤 ICP 备 15018581 号 - 1</a></span>
     </div>
     </footer>
 
