add wiki links and alert-bar

--- a/homepage_old/index.html
+++ b/homepage_old/index.html
@@ -50,7 +50,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzAxOTA2MDc0NQ==&scene=124#wechat_redirect" target="_blank">WeChat</a></li>
+                    <li><a href="https://wiki.uiccst.com/" target="_blank"><span class="label label-primary">NEW!</span>  Wiki</a></li>
                     <li><a href="https://github.com/UIC-PANICS/" target="_blank">UIC-PANICS</a></li>
                     <li><a href="http://uic.edu.hk/" class="btn btn-round btn-default">UIC homepage</a></li>
                </ul>
@@ -78,8 +78,9 @@
 </div>
 </div>
     <div class="container tim-container">
+
         <div id="extras">
-            <div class="space"></div>
+            <div class="space" style="padding-top: 50px;"><a href="https://wiki.uiccst.com"><div class="alert alert-info" role="alert" style="color: black" >UICcst Wiki 正式上线，点击即可访问</div></a></div>
             <div class="row">
                 <div class="col-md-7 col-md-offset-0 col-sm-10 col-sm-offset-1">
                     <div class="text-center">
