--- a/firebase/index.html
+++ b/firebase/index.html
@@ -17,7 +17,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function(){
             Typed.new(".element", {
-                strings: ["Computer Science & <br> Technology Homepage"],
+                strings: ["Computer Science &amp; <br> Technology Homepage"],
                 typeSpeed: 0,
                 cursorChar: "_",
                 fadeOutClass: 'typed-fade-out'
