--- a/homepage_old/index.html
+++ b/homepage_old/index.html
@@ -60,7 +60,7 @@
         </nav>
     </div><!--  end container-->
     <div class='blurred-container'>
-        <div class="img-src" style="background-image: url('https://ols1alctg.qnssl.com/head1.jpg')"></div>
+        <div class="img-src" style="background-image: url('https://cdn.drjchn.com/head1.jpg')"></div>
     </div>
 </div>
                     
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-md-7 col-md-offset-0 col-sm-10 col-sm-offset-1">
                     <div class="text-center">
-                        <div class="picture" href="assets/img/img.jpg" title="UICcst 2017"><img src="https://ols1alctg.qnssl.com/86270807-file_1487769396105_13612.jpg" alt="Rounded Image" class="img-rounded img-responsive img-dog"></div>
+                        <div class="picture" href="assets/img/img.jpg" title="UICcst 2017"><img src="https://cdn.drjchn.com/86270807-file_1487769396105_13612.jpg" alt="Rounded Image" class="img-rounded img-responsive img-dog"></div>
                         <p class="caption">UICcst group photo <span style="color: #575757; font-style: italic">(shot in 2016)</span></p>
                     </div>
                 </div>
